[project]
name = "backlog-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.2",
    "pygithub>=2.8.1",
    "pydantic>=2.12.3",
    "python-frontmatter>=1.1.0",
    "ruamel.yaml>=0.18.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
