[project]
name = "backlog-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "gitpython>=3.1.0",
    "pygithub>=2.8.1",
    "pydantic>=2.12.3",
    "ruamel.yaml>=0.18.0",
    "tiktoken>=0.12.0",
    "typer>=0.21.2",
    "pygments>=2.20.0",
    "cryptography>=46.0.6",
    "requests>=2.33.0",
]

[project.scripts]
sam = "sam_schema.cli:app"
sam-mcp = "sam_schema.server:run_server"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
    "fastmcp[tasks]>=3.0.2",
    "hypothesis>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--tb=short",
    "--import-mode=importlib",
    "-v",
    "-m",
    "not e2e",
]
testpaths = ["tests", "tests_sam", "tests_backlog"]
pythonpath = [
    ".",
    "./skills/implementation-manager/scripts",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "cli: marks tests as CLI integration tests",
    "unit: marks tests as unit tests",
    "critical: marks tests requiring property-based or mutation testing",
    "e2e: marks tests as end-to-end tests",
    "cross_backend: marks tests that run only in the test-cross-backend CI matrix job",
    "beads_smoke: marks tests that require a live bd binary on PATH",
]

[tool.coverage.run]
branch = true
source = ["backlog_core", "sam_schema", "dispatch_schema", "agent_profile"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backlog_core", "sam_schema", "dispatch_schema", "agent_profile"]
