[project]
name = "experiment-registry"
version = "0.1.0"
description = "MCP server for controlled experiment protocol — manages experiment lifecycle, registry, and state"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
