[project]
name = "experiment-registry"
version = "0.1.0"
description = "MCP server for controlled experiment protocol — manages experiment lifecycle, registry, and state"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "server.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
